# web_lottery_iframes

./: .env.example  .gitignore  README.md  TEST_CASES_DOCUMENTATION.md  conftest.py  docker-compose.yml  pyproject.toml
config/: base_test.py  config.py
data/: sensitive_data.py
iframes_test_project/database/: db_queries.py
iframes_test_project/locators/: __init__.py  authorization_locators.py  header_menu_locators.py  iframe_locators.py  lottery_page_locators.py  main_page_locators.py
iframes_test_project/pages/: base_page.py  lottery_page.py  main_page.py  payment_widget.py
iframes_test_project/utils/: attach_web.py  utils.py
image/: Dockerfile
init/selenoid/: browsers.json
tests/: test_big8_lottery.py  test_main_page.py
