[tool.poetry]
name = "fonbet"
version = "0.1.0"
description = ""
authors = ["Evgenii Starostin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
allure-pytest = "^2.13.5"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
addopts = [
    "--clean-alluredir",
    "--alluredir=allure-result",
    "-l",
    "-v",
    "--durations=15",
    "-rfEX",
    "--setup-show"
]
markers=[
#    Находятся тут для примера
    "fast: Маркируем тесты длящиеся менее пяти секунд",
    "slow: Тесты, которые длятся больше пяти секунд"
]